--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -240,10 +239,10 @@
 
 <!-- ATS-friendly invisible summary -->
 <div class="ats-hidden" aria-hidden="true">
-  Jane Doe | Full Stack Developer | jane.doe@example.com | +63 912 345 6789 | Manila, Philippines
-  Work: Senior Full Stack Developer, Acme Tech, Jan 2023 - Present; Full Stack Developer, Beta Studios, Jun 2020 - Dec 2022
-  Education: B.S. Computer Science, University of the Philippines, 2016-2020
-  Skills: HTML, CSS, JavaScript, React, Node.js, PHP, SQL
+ h1>JAY BENEDICT P. LEAL - Full Stack Developer</h1>
+  <p>Contact Information: Email lealjaybenedict14@gmail.com, Phone +63 968 253 5994, Location ILOCOS SUR, Philippines, GitHub github.com/lealjay-art.</p>
+  <p>Professional Summary: I am Jaybenedict P. Leal, an aspiring IT professional and current student at ISCC School, pursuing a career in Information Technology. I am passionate about developing my technical skills, exploring emerging technologies, and contributing to innovative IT solutions. I am eager to apply my knowledge in practical settings, collaborate with professionals, and continuously learn to grow as a competent IT specialist.</p>
+  <p>Skills: HTML , JavaScript, PHP , CSS .</p>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -277,4 +276,5 @@
 </script>
 </body>
 </html>
+
 
